src/objects/Fulfillment_Order_Line_Item__c.object
<CustomObject>
    <description>The Fulfillment Order Line Item object has a master-detail relationship to the Fulfillment Order, and represents an individual item added to the Fulfillment Order ‘Shopping Cart’.  Fulfillment Order Line Items contain a lookup relationship to the Fulfillment Item table to associate an active item to the Line Item.  A custom search UI for fulfillment Items will run from the Fulfillment Order page layout to return available items.</description>
    <fields>
        <fullName>Amount_Currency__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <inlineHelpText>Agency Number</inlineHelpText>
        <label>BIC</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <inlineHelpText>Name of the Bank</inlineHelpText>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Receipt_Amount__c</fullName>
        <label>Bank Receipt Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Receipt_Date__c</fullName>
        <label>Bank Receipt Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bank_Shipping_Date__c</fullName>
        <label>Bank Shipping Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Shipping_Reference__c</fullName>
        <label>Bank Shipping Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBU__c</fullName>
        <description>This is the Identification that will be used with the account number for EFT&apos;s in Argentina</description>
        <inlineHelpText>Used with ETs in Argentina</inlineHelpText>
        <label>CBU</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CLABE__c</fullName>
        <description>This is the tax number to be used for Mexico to pay taxes, and must be included in the information provided to the banks for EFTs.</description>
        <inlineHelpText>Used for ETs in Mexico</inlineHelpText>
        <label>CLABE</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CPF__c</fullName>
        <description>This is a personal tax id that is necessary for us to provide to the Bank in an automatic funds transfer for Brazil</description>
        <inlineHelpText>Brazil only - personal tax ID for ETs</inlineHelpText>
        <label>CPF</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CUIL_RUT__c</fullName>
        <description>This is the number used for paying taxes in Argentina. This must be part of the information provided to the bank when EFT&apos;s are used to refund the consumer</description>
        <inlineHelpText>Argentina (CUIL) &amp; Chile (RUT) only - Tax ID for ETs</inlineHelpText>
        <label>CUIL/RUT</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Status__c</fullName>
        <label>Card Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Fulfillment Order Line Items</relationshipLabel>
        <relationshipName>Fulfillment_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coupon_Information__c</fullName>
        <label>Coupon Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal approval</fullName>
                </value>
                <value>
                    <fullName>escalated approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNI__c</fullName>
        <description>This is the personal tax id that must be provided when executing EFT&apos;s for payment to the consumer. This is for LA countries</description>
        <inlineHelpText>LA Only - personal Tax ID for ETs</inlineHelpText>
        <label>DNI</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item_ID__c</fullName>
        <label>Fulfillment Item ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item_Name__c</fullName>
        <formula>TEXT(Fulfillment_Item__r.Request_Type__c)</formula>
        <label>Fulfillment Item Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Fulfillment Order Line Items</relationshipLabel>
        <relationshipName>Fulfillment_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Order__c</fullName>
        <label>Fulfillment Order</label>
        <referenceTo>Fulfillment_Order__c</referenceTo>
        <relationshipLabel>Fulfillment Order Line Items</relationshipLabel>
        <relationshipName>Fulfillment_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fulfillment_SKU__c</fullName>
        <label>Fulfillment SKU</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Instructions__c</fullName>
        <label>Handling Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hermes_Code__c</fullName>
        <label>Hermes Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hermes_Integration_Message__c</fullName>
        <label>Hermes Integration Message</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hermes_Integration_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hermes Integration Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <inlineHelpText>Account number</inlineHelpText>
        <label>IBAN</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isocode__c</fullName>
        <label>Isocode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Misc_Item_Description__c</fullName>
        <label>Misc Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reload_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reload Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Value__c</fullName>
        <description>Hidden field used by workflows to track value of associated fulfillment items such as coupons</description>
        <label>Retail Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Invoice_Number__c</fullName>
        <description>SAP Invoice Number</description>
        <label>SAP Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_POST_REF__c</fullName>
        <label>SAP POST REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Payment_Amount__c</fullName>
        <label>SAP Payment Amount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Payment_Date__c</fullName>
        <label>SAP Payment Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Payment_Number__c</fullName>
        <label>SAP Payment Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <label>Shipment Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprinter_Status__c</fullName>
        <description>This is a read-only field. The value will be populated by external could system.</description>
        <label>Sprinter Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIPO_DE_CUENTA__c</fullName>
        <description>This is the type of account, either checking or savings.</description>
        <inlineHelpText>LA only - Type of bank account, checking or savings</inlineHelpText>
        <label>TIPO DE CUENTA</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Line_Amount__c</fullName>
        <formula>Amount_Currency__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monetary_Value__c</fullName>
        <description>Total value of all cash/checks/fulfillment items on this line item.  Used in checking suspected fraud thresholds.</description>
        <formula>Amount_Currency__c + Retail_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monetary Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Retail_Value__c</fullName>
        <formula>Quantity__c  *  Fulfillment_Item__r.Retail_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>TrackingNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FU</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>RL</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fulfillment Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLI-{0000000000}</displayFormat>
        <label>Fulfillment Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Order Line Items</pluralLabel>
    <recordTypes>
        <fullName>PGCHRecordType</fullName>
        <active>true</active>
        <description>Record type used for checks</description>
        <label>PG CH Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>PGETRecordType</fullName>
        <active>true</active>
        <description>Record type used for electronic transfers</description>
        <label>PG ET Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>PGRecordType</fullName>
        <active>true</active>
        <description>Record type used for standard items (coupons, letters, etc)</description>
        <label>P&amp;G Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ARS_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;ARS&quot;,
(Amount_Currency__c &gt; $User.ARS_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your ARS Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AUD_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;AUD&quot;,
(Amount_Currency__c &gt; $User.AUD_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your AUD Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BHD_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;BHD&quot;,
(Amount_Currency__c &gt; $User.BHD_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your BHD Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BOB_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;BOB&quot;,
(Amount_Currency__c &gt; $User.BOB_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your BOB Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BRL_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;BRL&quot;,
(Amount_Currency__c &gt; $User.BRL_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your BRL Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BYR_Max_Threshold_jan16</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;BYR&quot;,
(Amount_Currency__c &gt; $User.BYR_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your BYR Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BZD_Max_Threshold_jan16</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;BZD&quot;,
(Amount_Currency__c &gt; $User.BZD_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your BZD Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAD_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;CAD&quot;,
(Amount_Currency__c &gt; $User.CAD_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your CAD Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHF_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;CHF&quot;,
(Amount_Currency__c &gt; $User.CHF_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your CHF Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLP_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;CLP&quot;,
(Amount_Currency__c &gt; $User.CLP_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your CLP Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CNY_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;CNY&quot;,
(Amount_Currency__c &gt; $User.CNY_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your CNY Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COP_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;COP&quot;,
(Amount_Currency__c &gt; $User.COP_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your COP Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRC_Max_Threshold_jan16</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;CRC&quot;,
(Amount_Currency__c &gt; $User.CRC_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your CRC Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CZK_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;CZK&quot;,
(Amount_Currency__c &gt; $User.CZK_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your CZK Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DKK_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;DKK&quot;,
(Amount_Currency__c &gt; $User.DKK_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your DKK Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EGP_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;EGP&quot;,
(Amount_Currency__c &gt; $User.EGP_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your EGP Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;EUR&quot;,
(Amount_Currency__c &gt; $User.EUR_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your EUR Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Edit_New_FF_ITEM_Closed</fullName>
        <active>true</active>
        <description>Prevents users from editing of creating a new FF item when closed.</description>
        <errorConditionFormula>AND
(OR
(AND
(ISPICKVAL(Fulfillment_Order__r.Status__c, &quot;Closed&quot;), 
ISNEW()), 
ISPICKVAL(Fulfillment_Order__r.Status__c, &quot;Closed&quot;), 
AND
(Fulfillment_Order__r.Locked_from_Editing__c = true)), 
NOT
($Profile.Name=&quot;Integration User&quot;))</errorConditionFormula>
        <errorMessage>Fulfillment Order is Closed, you can not add or edit items. Please Contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_Type_Equals_ET_BIC</fullName>
        <active>true</active>
        <description>the fields that are needed for an ET</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;ET&quot;),
ISNULL( BIC__c ))</errorConditionFormula>
        <errorMessage>Please Enter the BIC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_Type_Equals_ET_Bank_Name</fullName>
        <active>true</active>
        <description>the fields that are needed for an ET</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;ET&quot;),
ISNULL(  Bank_Name__c  ))</errorConditionFormula>
        <errorMessage>Please Enter the Bank Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_Type_Equals_ET_Bank_Routing</fullName>
        <active>true</active>
        <description>the fields that are needed for an ET</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;ET&quot;),
ISNULL( Bank_Routing_Number__c ))</errorConditionFormula>
        <errorMessage>Please Enter the Bank Routing Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_Type_Equals_ET_CH_or_PP</fullName>
        <active>true</active>
        <description>If Fulfillment Type = &quot;ET&quot;, or &quot;CH&quot; then Quantity must not be more than 1</description>
        <errorConditionFormula>OR(AND(ISPICKVAL( Type__c , &quot;CH&quot;),
Quantity__c&gt;1),
AND(ISPICKVAL( Type__c , &quot;ET&quot;),Quantity__c&gt;1),
AND(ISPICKVAL( Type__c , &quot;PP&quot;),Quantity__c&gt;1))</errorConditionFormula>
        <errorMessage>If Fulfillment Type = &apos;ET&apos;, &apos;PP&apos;, or &apos;CH&apos; then Quantity must not be more than 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_Type_Equals_ET_IBAN</fullName>
        <active>true</active>
        <description>the fields that are needed for an ET</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;ET&quot;),
ISNULL( IBAN__c ))</errorConditionFormula>
        <errorMessage>Please Enter the IBAN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_Type_Equals_ET_ISOCODE</fullName>
        <active>true</active>
        <description>the fields that are needed for an ET</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;ET&quot;),
ISNULL( Isocode__c ))</errorConditionFormula>
        <errorMessage>Please Enter the Iscode</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GBP_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;GBP&quot;,
(Amount_Currency__c &gt; $User.GBP_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your GBP Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTQ_Max_Threshold_jan16</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;GTQ&quot;,
(Amount_Currency__c &gt; $User.GTQ_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your GTQ Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HKD_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;HKD&quot;,
(Amount_Currency__c &gt; $User.HKD_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your HKD Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HNL_Max_Threshold_jan16</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;HNL&quot;,
(Amount_Currency__c &gt; $User.HNL_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your HNL Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRK_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;HRK&quot;,
(Amount_Currency__c &gt; $User.HRK_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your HRK Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HUF_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;HUF&quot;,
(Amount_Currency__c &gt; $User.HUF_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your HUF Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IDR_Max_Threshold_jan16</fullName>
        <active>true</active>
        <description>FIXME - do not know how these validation rules may change once currency decision is made</description>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;IDR&quot;,
(Amount_Currency__c &gt; $User.IDR_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your IDR Amount to your approved limit or if this is correct select the Keep Amount check box above and Save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ILS_Max_Threshold_jan16</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fulfillment_Order__r.Case__r.Currency__c=&quot;ILS&quot;,
(Amount_Currency__c &gt; $User.ILS_Monetary_Threshold__c),
Keep_Amount__c = FALSE)</errorConditionFormula>
        <errorMessage>You do not have the authority to send this Amount. Please change your ILS Amount to your approved limit or if this is correct select the Keep Amount check box above and Save</errorMessage>
    </validationRules>
</CustomObject>